<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetParamsActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="38dp"
        android:gravity="center_horizontal"
        android:text="@string/param_hint"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_fish2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:insetTop="6dp"
        android:insetBottom="6dp"
        android:text="@string/param_next"
        android:onClick="siguiente"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_fish3" />

    <Button
        android:id="@+id/btn_fish3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:insetTop="6dp"
        android:insetBottom="6dp"
        android:text="@string/param_cancel"
        android:onClick="cancelar"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_fish2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_fish3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/param_soil"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/param_humidity"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sensor1min"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/param_min"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/edittext_soil_min_humidity"
                    android:layout_width="380dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/param_min_hint_humi"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sensor1max"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/param_max"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/edittext_soil_max_humidity"
                    android:layout_width="380dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/param_max_hint_humi"
                    android:inputType="number" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/param_temperature"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sensor2min"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/param_min"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/edittext_soil_min_temp"
                    android:layout_width="380dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/param_min_hint_temp"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sensor2max"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/param_max"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/edittext_soil_max_temp"
                    android:layout_width="380dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/param_max_hint_temp"
                    android:inputType="number" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/param_room"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/param_humidity"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sensor3min"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/param_min"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/edittext_room_min_humidity"
                    android:layout_width="380dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/param_min_hint_humi"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sensor3max"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/param_max"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/edittext_room_max_humidity"
                    android:layout_width="380dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/param_max_hint_humi"
                    android:inputType="number" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/param_temperature"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sensor4min"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/param_min"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/edittext_room_min_temp"
                    android:layout_width="380dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/param_min_hint_temp"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sensor4max"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/param_max"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/edittext_room_max_temp"
                    android:layout_width="380dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/param_max_hint_temp"
                    android:inputType="number" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/param_water"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/param_water_level"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sensor5min"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/param_min"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/edittext_water_min_level"
                    android:layout_width="380dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/param_min_hint_water_lv"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sensor5max"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/param_max"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/edittext_water_max_level"
                    android:layout_width="380dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/param_max_hint_water_lv"
                    android:inputType="number" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:text="@string/param_temperature"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sensor6min"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/param_min"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/edittext_water_min_temp"
                    android:layout_width="380dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/param_min_hint_temp"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/sensor6max"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/param_max"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <EditText
                    android:id="@+id/edittext_water_max_temp"
                    android:layout_width="380dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/param_max_hint_temp"
                    android:inputType="number" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>